After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 786293 - external buffer change notification has been lost in the UI revamp
external buffer change notification has been lost in the UI revamp
Status: RESOLVED FIXED
Product: gnome-builder
Classification: Other
Component: editor
Flatpak Nightly Channel
Other Linux
: Normal critical
: ---
Assigned To: GNOME Builder Maintainers
GNOME Builder Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-08-14 22:14 UTC by Christian Hergert
Modified: 2017-08-15 11:37 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
editor-view: set back changed on volume infobar (7.13 KB, patch)
2017-08-15 11:36 UTC, sébastien lafargue
committed Details | Review

Description Christian Hergert 2017-08-14 22:14:26 UTC
We need to ensure the infobar works again.
Comment 1 sébastien lafargue 2017-08-15 11:36:30 UTC
Created attachment 357621 [details] [review]
editor-view: set back changed on volume infobar

We bring back this feature but it should probably
mutate to a more generic infobar and the changed-on-volume
signal doesn't seems to be prefectly reliable too.

Well, we are going out of time before the freeze, so...
Comment 2 sébastien lafargue 2017-08-15 11:37:09 UTC
Attachment 357621 [details] pushed as f1288c0 - editor-view: set back changed on volume infobar