editor-view: set back changed on volume infobar

We bring back this feature but it should probably
mutate to a more generic infobar and the changed-on-volume
signal doesn't seems to be prefectly reliable too.

Well, we are going out of time before the freeze, so...

https://bugzilla.gnome.org/show_bug.cgi?id=786293